--- a/annelien.html
+++ b/annelien.html
@@ -33,7 +33,7 @@
                 <td width="0" style="color: #a7b5c4;">|</td>
                 <td width="10"></td>
                 <td>
-                  <b>Social Media Marketer</b>
+                  <b>Social Media Expert</b>
                 </td>
               </tr>
               <tr>
