--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
 
     <ul>
+        <li><a href="carl.html">Carl</a></li>
         <li><a href="lander.html">Lander</a></li>
         <li><a href="lens.html">Lens</a></li>
         <li><a href="annelien.html">Annelien</a></li>
-        <li><a href="nick.html">Nick</a></li>
+        <li><a href="jelle.html">Jelle</a></li>
         <li><a href="nick.html">Nick</a></li>
     </ul>
     
