--- a/lander.html
+++ b/lander.html
@@ -7,6 +7,67 @@
 </head>
 <body>
 
+  
+  <textarea style="width: 100%;height: 300px;">
+    <table border="0" cellpadding="0" cellspacing="0" width="400" style="margin-left: 20px; margin-top: 20px;">
+      <tbody>
+          <tr>
+              <td height="100" width="130" valign="middle" style="width: 130px; height: 100px; text-align: left;">
+                  <img src="http://www.het-labo.be/email/lander.png" alt="Lander Boeckx" width="100" height="100" style="border-radius: 9999999px;">
+              </td>
+              <td height="100" width="270" style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px; font-weight: normal; color: #233242; width: 270px; min-height: 100px;">
+                <table cellpadding="0" cellspacing="0" border="0">
+                  <tr>
+                    <td colspan="5">
+                      <a href="https://www.het-labo.be/" target="_blank">
+                        <img src="http://www.het-labo.be/email/logo.png" alt="Het Labo" width="98" height="16">
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="5" style="height:10px;"></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <b style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px; font-weight: bold; color: #233242;">Lander Boeckx</b>
+                      <span style="color: #a7b5c4;margin: 0 5px;">|</span>
+                      <b style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px; font-weight: bold; color: #233242;">Digital Marketing Strategist</b>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <a href="mailto:lander@het-labo.be" style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px; font-weight: normal; color:#233242; text-decoration: none;">lander@het-labo.be</a>
+                      <span style="color: #a7b5c4;margin: 0 5px;">|</span>
+                      <a href="tel:0474822665" style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px; font-weight: normal; color:#233242; text-decoration: none;">0474 82 26 65</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="5">
+                      <table border="0" cellpadding="0" cellspacing="0">
+                        <tr>
+                          <td width="16" style="width: 16px; border-bottom: 1px solid #f9a11b; margin: 5px 0; height: 5px;"></td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="5" colspan="5"></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <a href="https://www.het-labo.be/" style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px; font-weight: bold; color:#233242; text-decoration: none;" target="_blank">het-labo.be</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="font-family:Verdana, sans-serif; font-size:10px; line-height: 16px;font-weight: normal; color:#233242;">your digital partner</td>
+                  </tr>
+                </table>        
+              </td>
+          </tr>
+      </tbody>
+  </table>
+  </textarea>
+
     <table border="0" cellpadding="0" cellspacing="0" width="400" style="margin-left: 20px; margin-top: 20px;">
         <tbody>
             <tr>
